--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
                     </div>
                 </div> -->
             </div>
+            <div class="owl-carousel-item position-relative" style="height: 60vh;" >
+                <img class="" src="image/banner/3.jpg" style="height: 100%;object-fit: cover;" alt="">
+                <!-- <div class="carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-lg-8 text-center">
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Smart Security Solution For All Business</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                                <a href="" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">Free Quote</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
             
         </div>
     </div>
@@ -253,7 +268,7 @@
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
         <div class="container about px-lg-0">
             <div class="row g-0 mx-lg-0 align-items-center">
-                <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
+                <div class="col-lg-6 ps-lg-0"  >
                     <div class="position-relative h-100">
                         <img src="image/round-papad.png" class="ani" height="auto" width="100%" alt="">
                     </div>
@@ -428,7 +443,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 pe-lg-0" style="height: 400px;">
+                <div class="col-lg-4 pe-lg-0"  >
                     <div class="position-relative h-100">
                         <div id="carouselExample" class="carousel slide">
                             <div class="carousel-inner">
